force-app/main/default/objects/RetailStore/fields/Industry__c.field-meta.xml
<CustomField>
    <fullName>Industry__c</fullName>
    <label>Industry</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Electronics</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>