force-app/main/default/objects/RetailStore/fields/Setup_Cost__c.field-meta.xml
<CustomField>
    <fullName>Setup_Cost__c</fullName>
    <label>Setup Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>