force-app/main/default/objects/RetailStore/listViews/All_RetailStore.listView-meta.xml
<ListView>
    <fullName>All_RetailStore</fullName>
    <columns>Name</columns>
    <columns>Account</columns>
    <columns>RetailLocationGroup</columns>
    <columns>Annual_Revenue__c</columns>
    <columns>Avg_Daily_Footfall__c</columns>
    <columns>Setup_Cost__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>